Shenandoah should not enqueue string dedup candidates during root scan

XMLWordPrintable

    • gc
    • b14
    • generic
    • generic

        In Shenandoah, during the init-mark phase, we are scanning the StringDedup roots (queues and tables) when string deduplication is enabled. For this, we're using a closure that also enqueues dedup canidates. Which means that we may end up concurrently reading AND writing the queues, which leads to corruption. This seems to make the TestStringDedupStress occasionally crash.

              Assignee:
              Roman Kennke
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: