8221278: Shenandoah should not enqueue string dedup candidates during root scan

Reviewed-by: shade